--- a/src/app/components/container/home/home.component.html
+++ b/src/app/components/container/home/home.component.html
@@ -6,7 +6,7 @@
     <ul class="categorie container flex jcc aic " >
         <li class="listPuce flex " *ngFor="let cat of categories_data" >
             <div class="categorie-image" >
-                <a href="#" (click)="filterProducts(cat.name)" (click)="fetchCat()">
+                <a href="#" >
                     <img src="{{ cat?.image }}" >
                 </a>
                 
