--- a/src/app/components/container/profil/profil-name/profil-name.component.scss
+++ b/src/app/components/container/profil/profil-name/profil-name.component.scss
@@ -69,7 +69,7 @@ img{
     background-color: rgb(197,90,17);
     border-radius: 5px;
     position: absolute;
-    top: 30%;
+    top: -10px;
     right:8%;
     color: white;
     box-sizing: content-box;
@@ -97,5 +97,16 @@ Media query
     p{
         font-size: 0.8em;
     }
+    :host ::ng-deep  app-button{
+        right:5%;
+    }
 
+}
+
+@media screen and (max-width: 500px){
+    :host ::ng-deep  app-button{
+        left:20px;
+        top: 15px;
+        
+    }
 }
