--- a/src/app/components/container/signin/signin.component.scss
+++ b/src/app/components/container/signin/signin.component.scss
@@ -5,6 +5,7 @@
     align-items: center;
     font-family: 'Roboto', sans-serif;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 form {
@@ -83,6 +84,7 @@ form button {
 
 a{
     color: inherit;
+    font-style: italic;
 }
 
 .error{
