--- a/src/app/components/container/signup/signup.component.html
+++ b/src/app/components/container/signup/signup.component.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     
-        <p class="inscription">J'ai déjà un compte. Je me <span><a routerLink="/connexion">connecte.</a> </span> </p>
+        <p class="inscription">J'ai déjà un compte. Je me <span><a routerLink="/connexion"> connecte ici.</a> </span> </p>
         <div align="center">
             <button [disabled]="!this.signupForm.valid" (click)="handleSubmit()" type="submit">S'inscrire</button>
         </div>
