--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,12 +1,12 @@
 #footer{
-    margin-top: 30px;
+    margin-top: 50px;
     display: flex;   
 }
 
 .footer-container{
     width: 100%;
     flex-direction: row-reverse;
-    height: 25vh;
+    height: 260px;
 }
 #left{
     background-color: #29313d;
